# looney-tunes-pipecat-demo

./: .gitignore  README.md
backend/: bot.py  progress_tracker.py  pyproject.toml  requirements.txt  server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
